css/style.css
/*--------------------------------------------------------------------- File Name: style.css ---------------------------------------------------------------------*/


/*--------------------------------------------------------------------- import Files ---------------------------------------------------------------------*/

@import url(animate.min.css);
@import url(normalize.css);
@import url(icomoon.css);
@import url(css/font-awesome.min.css);
@import url(meanmenu.css);
@import url(owl.carousel.min.css);
@import url(swiper.min.css);
@import url(slick.css);
@import url(jquery.fancybox.min.css);
@import url(jquery-ui.css);
@import url(nice-select.css);

/*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/

* {
    box-sizing: border-box !important;
    transition: ease all 0.5s;
}

html {
    scroll-behavior: smooth;
}

body {
    color: #666666;
    font-size: 14px;
    font-family: 'Poppins', sans-serif;
    line-height: 1.80857;
    font-weight: normal;
    overflow-x: hidden;
}

a {
    color: #1f1f1f;
    text-decoration: none !important;
    outline: none !important;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    letter-spacing: 0;
    font-weight: normal;
    position: relative;
    padding: 0 0 10px 0;
    font-weight: normal;
    line-height: normal;
    color: #111111;
    margin: 0
}

h1 {
    font-size: 24px
}

h2 {
    font-size: 22px
}

h3 {
    font-size: 18px
}

h4 {
    font-size: 16px
}

h5 {
    font-size: 14px
}

h6 {
    font-size: 13px
}

*,
*::after,
*::before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
    color: #212121;
    text-decoration: none!important;
    opacity: 1
}

button:focus {
    outline: none;
}

ul,
li,
ol {
    margin: 0px;
    padding: 0px;
    list-style: none;
}

p {
    margin: 12px;
    font-weight: 300;
    font-size: 15px;
    line-height: 24px;
}

a {
    color: #222222;
    text-decoration: none;
    outline: none !important;
}

a,
.btn {
    text-decoration: none !important;
    outline: none !important;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

img {
    max-width: 100%;
    height: auto;
}

 :focus {
    outline: 0;
}

.paddind_bottom_0 {
    padding-bottom: 0 !important;
}

.btn-custom {
    margin-top: 20px;
    background-color: transparent !important;
    border: 2px solid #ddd;
    padding: 12px 40px;
    font-size: 16px;
}

.lead {
    font-size: 18px;
    line-height: 30px;
    color: #767676;
    margin: 0;
    padding: 0;
}

.form-control:focus {
    border-color: #ffffff !important;
    box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
}

.navbar-form input {
    border: none !important;
}

.badge {
    font-weight: 500;
}

blockquote {
    margin: 20px 0 20px;
    padding: 30px;
}

button {
    border: 0;
    margin: 0;
    padding: 0;
    cursor: pointer;
}

.full {
    float: left;
    width: 100%;
}

.layout_padding {
    padding-top: 100px;
    padding-bottom: 0px;
}

.padding_0 {
    padding: 0px;
}


/* header section start */

.header_section {
    width: 100%;
    float: left;
    background-image: url(../images/banner-bg.png);
    height: auto;
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

.header_bg {
    width: 100%;
    float: left;
    background: #1d1d1d;
    height: auto;
    background-size: 100%;
}

.bg-light {
    background-color: transparent !important;
}

.mr-auto,
.mx-auto {
    margin: 0 auto;
    text-align: center;
}

.navbar-expand-lg .navbar-nav .nav-link {
    padding: 30px 20px 10px 20px;
    font-size: 17px;
    color: #fefefd;
    text-transform: uppercase;
    background-color: transparent;
    margin: 0px 5px;
}

.navbar-light .navbar-nav .nav-link:focus,
.navbar-light .navbar-nav .nav-link:hover {
    color: #fefefd;
    background-color: #f01c1c;
}

.navbar-light .navbar-nav .active>.nav-link,
.navbar-light .navbar-nav .nav-link.active,
.navbar-light .navbar-nav .nav-link.show,
.navbar-light .navbar-nav .show>.nav-link {
    color: #fefefd;
    background-color: #f01c1c;
}

.navbar-brand {
    margin: 0px;
    float: right;
}

.navbar {
    padding: 0px 0px 20px 0px;
}

.user_icon {
    padding-right: 15px;
}

.login_bt {
    width: 210px;
    margin-top: 28px;
}

.login_bt ul {
    margin: 0px;
    padding: 0px;
}

.login_bt li a {
    float: left;
    font-size: 18px;
    color: #fefefd;
    text-transform: uppercase;
    padding: 0px 0px 0px 50px;
}

.login_bt li a:hover {
    color: #f01c1c;
}

.navbar-brand{
    /* margin-top: 20px; */
}


/* header section end */


/* banner section start */

.banner_section {
    width: 100%;
    float: left;
    padding: 90px 0px 140px 0px;
}

.banner_taital_main {
    width: 100%;
    float: left;
}

.banner_taital {
    width: 100%;
    font-size: 80px;
    color: #fefefd;
    font-weight: 800;
    line-height: 90px;
}

.banner_text {
    width: 100%;
    float: left;
    font-size: 16px;
    color: #fefefd;
    margin: 20px 0px 0px 0px;
}

.btn_main {
    width: 100%;
    float: left;
    padding-top: 40px;
}

.about_bt {
    width: 175px;
    float: left;
}

.about_bt a {
    width: 100%;
    float: left;
    font-size: 18px;
    background-color: #fefefd;
    color: #1c130f;
    text-align: center;
    padding: 10px;
    border-radius: 5px;
    text-transform: uppercase;
}

.about_bt a:hover {
    color: #fefefd;
    background-color: #f01c1c;
}


.about_bt.active a {
    color: #fefefd;
    background-color: #f01c1c;
}

.callnow_bt {
    width: 175px;
    float: left;
}
/* ... */

